--- a/package.json
+++ b/package.json
@@ -2,7 +2,18 @@
   "name": "zaidnsara",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3005",
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "animate.css": "^3.7.0",
+    "aws-sdk": "^2.453.0",
+    "axios": "^0.18.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
+    "express": "^4.16.4",
+    "massive": "^5.8.0",
+    "multer": "^1.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
