--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:3005",
   "dependencies": {
+    "@csstools/normalize.css": "^10.1.0",
     "@material-ui/core": "^3.9.3",
     "animate.css": "^3.7.0",
     "aws-sdk": "^2.453.0",
@@ -14,6 +15,7 @@
     "express": "^4.16.4",
     "massive": "^5.8.0",
     "multer": "^1.4.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
